# rust-fs-ext4

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: IMPROVEMENT-PLAN.md  STATUS-2026-05-08.md
examples/: fsck_demo.rs
include/: fs_ext4.h
src/: alloc.rs  block_cache.rs  block_io.rs  capi.rs  casefold.rs  extent.rs  extent_mut.rs  fs.rs  fs_core_bridge.rs  fsck.rs  hash.rs  inode.rs  mkfs.rs
test-disks/: _vm-builder.sh  build-ext4-feature-images.sh
tests/: block_cache_integration.rs  capi_create.rs  capi_long_symlink.rs  capi_pwrite.rs  capi_rename_overwrite.rs  capi_symlink.rs  fsck_repair.rs  fsck_wrong_dotdot.rs  journal_replay.rs  journal_writer_crash_rename_write.rs  journal_writer_rename_write_xattr.rs  mkdir_unique_inodes.rs  mkfs_roundtrip.rs
